Modify javafx test for Java >= 9
We need to load the corresponding modules to test for JavaFX support.

TODO: Extend --module-path and --add-modules to actually support JavaFX